--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
